--- a/about.css
+++ b/about.css
@@ -13,7 +13,7 @@ body {
   top: 0; left: 0;
   width: 100%;
   height: 100%;
-  background: url('https://i.imgur.com/qV0fI6y.png') repeat;
+  background: url('about(1).jpeg') repeat;
   opacity: 0.15;
   z-index: 0;
   animation: float 60s linear infinite;
